# IRCBot

./: CMakeLists.txt  README.md  TODO  config.h.cmake
saves/: basic_commands  channels_list  colossusofc1out  raw_sym_weapons  test
src/: CMakeLists.txt  ChannelIO.cpp  ChannelIO.h  CommandBreed.h  CommandHandler.cpp  CommandHandler.h  IRCBot.cpp  IRCBot.h  IRCBotController.cpp  IRCBotController.h  IRCBotOffline.cpp  IRCBotOffline.h  LastFMCurrentSong.cpp  LastFMCurrentSong.h  LoadBasicCommands.cpp  LoadBasicCommands.h  LoadedChannelController.cpp  LoadedChannelController.h  LoadedChannelData.h  ReadWriteIO.cpp  ReadWriteIO.h  StringManipulation.cpp  StringManipulation.h  SymWeaponInfo.cpp  SymWeaponInfo.h  Utils.cpp  Utils.h  main.cpp
tests/: CMakeLists.txt  mock_irc_bot.h  test_command_handler.cpp  test_irc_bot_controller.cpp  test_load_basic_commands.cpp  test_main.cpp  test_read_write_io.cpp  test_string_manipulation.cpp  test_sym_weapons.cpp
